--- a/package.json
+++ b/package.json
@@ -150,9 +150,9 @@
     "@angular/platform-browser-dynamic": "^4.3.0",
     "@angular/router": "^4.3.0",
     "@angular/service-worker": "^1.0.0-beta.16",
-    "angular2-openlayers": "^0.6.8",
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
+    "ngx-openlayers": "^0.6.9",
     "rxjs": "^5.4.2",
     "systemjs": "0.20.14",
     "zone.js": "0.8.12"
