--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "@angular/platform-browser-dynamic": "^4.3.0",
     "@angular/router": "^4.3.0",
     "@angular/service-worker": "^1.0.0-beta.16",
+    "@types/openlayers": "^4.3.4",
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
     "ngx-openlayers": "^0.6.9",
